add source code link

--- a/UI/index.html
+++ b/UI/index.html
@@ -18,7 +18,7 @@
             body {
                 background: #000;
             }
-            h1, h3 {
+            h1, h3, a {
                 color: #0ff;
             }
         </style>
@@ -28,6 +28,7 @@
         <table align=center border="1px solid white" id="keyboard">
         </table>
         <h3 align=center>Select a color: <input type="color" id="color" value="#00ffff"/></h3>
+        <h3 align=center><a href="https://github.com/joonatoona/ControlMyKeyboard">Source Code</a></h3>
         <script src="JS/app.js"></script>
     </body>
 </html>
